<resources>
    <string name="app_name">TCC PUC Minas - Miotto</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Acessar</string>
    <string name="action_sign_up">Criar Conta</string>
    <string name="login_ou_criar_conta">Ou</string>
    <string name="action_delete">Excluir</string>
    <string name="email_ou_senha">Usuário ou senha incorretos</string>
    <string name="usuario_invalido">Não foi possível criar o usuário</string>
    <string name="cliente_atualizado">Ação realizada com sucesso!</string>
    <string name="erro_cliente_atualizado">ERRO - Problemas com a atualização!</string>
</resources>
