<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="cliente"
            type="tcc.pucminas.marcelomiotto.miottotccpucminas.Model.Cliente" />

        <variable
            name="clienteViewModel"
            type="tcc.pucminas.marcelomiotto.miottotccpucminas.ViewModel.ClienteViewModel"
            />
    </data>


    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="tcc.pucminas.marcelomiotto.miottotccpucminas.View.LoginActivity">


        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress_id"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/scroll_login_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/login_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_email_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={cliente.email}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_password_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={cliente.senha}" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_signIn_id"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/login_button_space"
                    android:background="@drawable/button_border"
                    android:onClick="@{() -> clienteViewModel.autenticarCliente(cliente)}"
                    android:text="@string/action_sign_in" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_button_space"
                    android:text="@string/login_ou_criar_conta"
                    android:textAlignment="center" />


                <Button
                    android:id="@+id/button_change_screen_id"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_border"
                    android:layout_marginTop="@dimen/login_button_space"
                    android:onClick="@{() -> clienteViewModel.criarCliente(cliente)}"
                    android:text="@string/action_sign_up" />


            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>
